Add mbstring extension

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "php": ">=5.3.3",
-        "pug-php/pug": ">=1.12"
+        "pug-php/pug": ">=1.12",
+        "ext-mbstring": "*"
     },
     "scripts": {
         "post-autoload-dump": "php update.php"
