--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
     },
     "scripts": {
         "post-autoload-dump": "php update.php"
+    },
+    "config": {
+        "process-timout": 10800
     }
 }
