Add markdown filter for demo

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "php": ">=5.3.3",
         "pug-php/pug": ">=1.12",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "pug-php/pug-filter-markdown": "^1.2"
     },
     "scripts": {
         "post-autoload-dump": "php update.php"
