--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     },
     "config": {
         "process-timout": 10800
+    },
+    "extra":  {
+        "build": "2019-07-29 79:30:00"
     }
 }
